
version 0.99b, December 18th, 2007
----------------------------------
 o fixed link bug with ocaml 3.09 
   (see http://caml.inria.fr/mantis/view.php?id=4124)

version 0.99a, November 21st, 2007
---------------------------------
 o fixed bug in Makefile when lablgtk2 is not installed
 o Sig.I.create and Sig_pack.create are now of type ?size:int -> unit -> t 
   (instead of unit -> t) to indicate an initial guess on the graph size

version 0.99, June 27th, 2007
-----------------------------
 o experimental: GTK-based graph editor based on hyperbolic geometry;
   to build it and test it, cd to editor/ and type make
 o [Components.Make] functor: function [scc] as a new profile and a
   more precise specification. New function [scc_array].
 o fixed configure to set ocaml's standard library using "ocamlc -where"
 o new module Dot to parse files in Graphviz's DOT format
 o slight change in the license (no more clause 6 of the LGPL; see LICENSE)
 o new module Strat implementing simple game strategies
 o Graphviz: little refactoring and improved documentation

version 0.98, Sep 27th, 2006
----------------------------
 o rename Sig.IA to Sig.IM
 o add subgraph support in Graphviz 
   (breaks ascendent compatibility if you use Graphviz: by default add
      let get_subgraph _ = None
   in the argument of Graphviz.Dot and Graphviz.Neato)

version 0.97, July 20th, 2006
-----------------------------
 o fixed compilation under Windows/Cygwin (contributed by Denis Berthod)
 o fixed bug with escaped string in Graphviz

version 0.96, May 2nd, 2006
---------------------------
 o new demo program: sudoku.ml (solving the Sudoku using graph coloring)
 o new module Coloring for (rather brute force) graph coloring
 o new implementation Imperative.Digraph.ConcreteBidirectional
   that maintains the set of ingoing edges for each node, thus improving the
   efficiency of functions such as iter_pred, pred, in_degree, etc.
   (contributed by Ted Kremenek)

version 0.95, November 2nd, 2005